# ts-channel

./: docker-compose.yml  main.py  pyproject.toml
config/: settings.py
src/controllers/: marketplace_controller.py  order_history_controller.py  product_post_controller.py  shipping_history_controller.py
src/daos/: marketplace_dao.py  order_history_dao.py  product_post_dao.py  shipping_history_dao.py
src/models/: marketplace_model.py  order_history_model.py  product_post_model.py  shipping_history_model.py
src/views/: catalog_view.py  channel_view.py  order_view.py  shipping_view.py
src/web/: start.py
src/web/static/: styles.css
src/web/templates/: base.html  home.html  marketplace.html  order_history.html  product_post.html  shipping_history.html
test/src/controller/: test_marketplace_controller.py  test_order_history_controller.py  test_product_controller.py
test/src/daos/: test_marketplace_dao.py
