[tool.poetry]
name = "ts-channel-temp"
version = "0.1.0"
description = "Add poetry in project"
authors = ["wstiehler <william.stiehler@evoluinfo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.15"
psycopg2-binary = "^2.8.6"
Flask = "^2.0.0"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
